--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "@dhiwise/component-tagger": "^1.0.10",
     "@google/generative-ai": "^0.24.1",
+    "@googlemaps/js-api-loader": "^2.0.1",
     "@radix-ui/react-slot": "^1.2.3",
     "@reduxjs/toolkit": "^2.6.1",
     "@supabase/supabase-js": "^2.75.1",
@@ -91,6 +92,7 @@
     "@vitejs/plugin-react": "4.3.4",
     "autoprefixer": "10.4.2",
     "postcss": "8.4.8",
+    "rollup-plugin-visualizer": "^6.0.5",
     "tailwindcss": "3.4.6",
     "vite": "5.0.0",
     "vite-tsconfig-paths": "3.6.0"
